--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
+        "easycorp/easyadmin-bundle": "4.x-dev",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
